--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
-    "formidable": "^3.5.1",
+    "formidable": "^3.5.2",
+    "framer-motion": "^12.4.7",
     "gsap": "^3.12.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.438.0",
@@ -44,6 +45,7 @@
     "mysql2": "^3.11.3",
     "next": "^14.2.13",
     "next-auth": "^4.24.8",
+    "next-connect": "^1.0.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
     "notistack": "^3.0.2",
@@ -72,6 +74,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.16",
