--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -37,13 +37,13 @@
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
     "formidable": "^3.5.2",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.4.10",
     "gsap": "^3.12.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.438.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "1.4.5-lts.1",
     "mysql2": "^3.11.3",
-    "next": "^14.2.13",
+    "next": "^14.2.14",
     "next-auth": "^4.24.8",
     "next-connect": "^1.0.0",
     "next-themes": "^0.3.0",
@@ -69,7 +69,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.0",
-    "twilio": "^5.4.3",
+    "twilio": "^5.4.5",
     "validator": "^13.12.0",
     "winston": "^3.17.0"
   },
@@ -77,18 +77,18 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^20",
+    "@types/node": "^20.16.3",
     "@types/nodemailer": "^6.4.16",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "@types/recharts": "^1.8.29",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.12.2",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.7",
-    "postcss": "^8",
-    "prisma": "^5.20.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.4.44",
+    "prisma": "^5.21.1",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4"
   }
 }
