--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "tesseract.js": "^6.0.0",
     "twilio": "^5.4.5",
     "validator": "^13.12.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
